Initial commit. changed the method that is called in the router js file

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 
     <script src="/scripts/util.js"></script>
 
+    <!-- Private data -->
+
+    <!-- APP CODE -->
+    <!-- TODO Add MVC components -->
     <!-- Model: -->
     <script src="/scripts/article.js"></script>
 
