connected js scripts to index. developed functions that will tap the github api and render all of my repos. connected eslint.

--- a/index.html
+++ b/index.html
@@ -70,18 +70,21 @@
     <script src="/scripts/util.js"></script>
 
     <!-- Private data -->
-
+    <script src="/scripts/githubToken.js"></script>
     <!-- APP CODE -->
     <!-- TODO Add MVC components -->
     <!-- Model: -->
     <script src="/scripts/article.js"></script>
+    <script src="/scripts/repo.js"></script>
 
     <!-- View: -->
     <script src="/scripts/articleView.js"></script>
+    <script src="/scripts/repoView.js"></script>
 
     <!-- Controller: -->
     <script src="/scripts/articleController.js"></script>
-    <script src="/scripts/aboutController.js"></script>
+    <script src="/scripts/reposController.js"></script>
+    <!-- <script src="/scripts/aboutController.js"></script> -->
 
     <!-- Router: -->
     <script src="/scripts/router.js"></script>
