created template for about page and refactored repoviiw index function

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </header>
         <section>
           <h1>Some of my interests:</h1>
+          <section id="about-section"></section>
           <ul>
             <li>Coding</li>
             <li>Sharing what I've learned</li>
