changes twitter and github link

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <ul>
           <li><a href="/" class="icon-home"> Home</a></li>
           <li><a href="/about" class="icon-address-book"> About</a></li>
-          <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
-          <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+          <li><a href="http://twitter.com/jesse_thach" target="_blank" class="icon-twitter3"> Twitter</a></li>
+          <li><a href="http://github.com/jessethach" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
       </nav>
     </header>
@@ -72,8 +72,7 @@
 
     <!-- Private data -->
     <script src="/scripts/githubToken.js"></script>
-    <!-- APP CODE -->
-    <!-- TODO Add MVC components -->
+
     <!-- Model: -->
     <script src="/scripts/article.js"></script>
     <script src="/scripts/repo.js"></script>
