made content changes to index and style changes in css

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
   </head>
   <body>
+
     <header class="site-header clearfix">
       <section class="heading-group-h1">
         <h1 class="site-title">
-          Kilovolt Blog!
+          Jesse's Blog!
         </h1>
         <h2>The shocking power of static pages</h2>
       </section>
